--- a/TMS/TMS_notebook.ipynb
+++ b/TMS/TMS_notebook.ipynb
@@ -1,10 +1,180 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Mini-projet Traitement du Signal***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.io.wavfile as wavfile\n",
+    "from scipy.signal import resample\n",
+    "from lpc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 1: Normalize and resample the signal at 8kHz\n",
+    "    # -------------------------------------------------------\n",
+    "    sampling_rate, speech = wavfile.read('./audio/speech.wav')\n",
+    "\n",
+    "    # Normalization\n",
+    "    speech = np.array(speech)\n",
+    "    speech = 0.9 * speech / max(abs(speech))\n",
+    "\n",
+    "    # Resampling\n",
+    "    target_sampling_rate = 8000\n",
+    "    target_size = int(len(speech) * target_sampling_rate / sampling_rate)\n",
+    "    speech = resample(speech, target_size)\n",
+    "    sampling_rate = target_sampling_rate\n",
+    "\n",
+    "    # Save resampled signal\n",
+    "    wavfile.write(\"./results/speech_resampled.wav\", sampling_rate, speech)\n",
+    "\n",
+    "    # -------------------------------------------------------\n",
+    "    # 2: Block decomposition of the signal\n",
+    "    # -------------------------------------------------------\n",
+    "    \n",
+    "    def hamming_window(N, T, sampling_rate):\n",
+    "        t = np.linspace(0, T, N)  # Vecteur de temps allant de 0 à T\n",
+    "        return 0.54 - 0.46 * np.cos(2 * np.pi * t / T)\n",
+    "\n",
+    "    # Utilisation d'une fenêtre de Hamming de 20 ms\n",
+    "    T = 0.02  # Largeur de la fenêtre en secondes\n",
+    "    N = int(T * sampling_rate)  # Nombre d'échantillons dans la fenêtre\n",
+    "    w = hamming_window(N, T, sampling_rate)  # Fenêtre de Hamming \n",
+    "\n",
+    "    # Recouvrement de 50%\n",
+    "    R = 0.5\n",
+    "    step = int(N * (1 - R))\n",
+    "\n",
+    "    blocks, windowed_blocks = blocks_decomposition(speech, w, R=0.5)\n",
+    "    n_blocks, block_size = blocks.shape\n",
+    "    \n",
+    "    ### w = hann(floor(0.04*sampling_rate), False)\n",
+    "    \n",
+    "    # Check if the reconstruction of the signal is correct\n",
+    "    rec = blocks_reconstruction(windowed_blocks, w, speech.size, R = 0.5) \n",
+    "    wavfile.write(\"./results/block_reconstruction.wav\", sampling_rate, rec)   \n",
+    "     \n",
+    "    # -------------------------------------------------------\n",
+    "    # 3: Encodes the signal block by block\n",
+    "    # -------------------------------------------------------\n",
+    "    \n",
+    "    p = 32 # number of coefficients of the filter\n",
+    "    blocks_encoding = []\n",
+    "    \n",
+    "    for block, windowed_block in zip(blocks, windowed_blocks):\n",
+    "\n",
+    "        coefs, prediction = lpc_encode(windowed_block, p)\n",
+    "        residual = windowed_block - prediction\n",
+    "        voiced, pitch = estimate_pitch(block, sampling_rate, threshold=1)\n",
+    "        \n",
+    "        blocks_encoding.append({'coefs': coefs, \n",
+    "          'residual': residual,\n",
+    "          'size': block.size,\n",
+    "          'gain': np.std(residual),\n",
+    "          'pitch': pitch,\n",
+    "          'voiced': voiced})\n",
+    "               \n",
+    "    # -------------------------------------------------------\n",
+    "    # 4: Decodes each block based upon the residual\n",
+    "    # -------------------------------------------------------\n",
+    "    \n",
+    "    blocks_decoded = []\n",
+    "    for encoding in blocks_encoding:\n",
+    "      \n",
+    "        block_decoded = lpc_decode(encoding['coefs'], encoding['residual'])\n",
+    "        blocks_decoded.append(block_decoded)\n",
+    "\n",
+    "    blocks_decoded = np.array(blocks_decoded)\n",
+    "    decoded_speech = blocks_reconstruction(blocks_decoded, w, speech.size, \n",
+    "      R = 0.5)\n",
+    "      \n",
+    "    wavfile.write(\"./results/decoded_speech.wav\", sampling_rate, decoded_speech)\n",
+    "    \n",
+    "    # -------------------------------------------------------\n",
+    "    # 5: Decodes each block based upon white noise\n",
+    "    # -------------------------------------------------------\n",
+    "    \n",
+    "    blocks_decoded = []\n",
+    "    for encoding in blocks_encoding:\n",
+    "      \n",
+    "        excitation = np.random.normal(0, encoding['gain'], encoding['size'])\n",
+    "        block_decoded = lpc_decode(encoding['coefs'], excitation)\n",
+    "        blocks_decoded.append(block_decoded)\n",
+    "\n",
+    "    blocks_decoded = np.array(blocks_decoded)\n",
+    "    decoded_speech = blocks_reconstruction(blocks_decoded, w, speech.size, \n",
+    "      R = 0.5)\n",
+    "      \n",
+    "    wavfile.write(\"./results/decoded_speech_noise.wav\", sampling_rate, \n",
+    "     decoded_speech)\n",
+    "    \n",
+    "    # -----------------------------------------------------------\n",
+    "    # 6: Decodes each block based upon the pitch (Bonus Question)\n",
+    "    # -----------------------------------------------------------\n",
+    "    \n",
+    "    blocks_decoded = []\n",
+    "    for encoding in blocks_encoding:\n",
+    "      \n",
+    "        if(encoding['voiced']):\n",
+    "        #if False:\n",
+    "        \n",
+    "            excitation = np.zeros(encoding['size'])\n",
+    "            step = int(round(encoding['pitch']*sampling_rate))\n",
+    "            excitation[::step] = 1\n",
+    "            excitation *= encoding['gain']/np.std(excitation)\n",
+    "            \n",
+    "        else:\n",
+    "        \n",
+    "            excitation = np.random.normal(0, encoding['gain'], encoding['size'])\n",
+    "        \n",
+    "        block_decoded = lpc_decode(encoding['coefs'], excitation)\n",
+    "        blocks_decoded.append(block_decoded)\n",
+    "\n",
+    "    blocks_decoded = np.array(blocks_decoded)\n",
+    "    decoded_speech = blocks_reconstruction(blocks_decoded, w, speech.size, \n",
+    "      R = 0.5)\n",
+    "      \n",
+    "    wavfile.write(\"./results/decoded_speech_pitch.wav\", sampling_rate, \n",
+    "     decoded_speech)"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
