--- a/TMS/TMS_notebook.ipynb
+++ b/TMS/TMS_notebook.ipynb
@@ -65,11 +65,25 @@
     "    blocks, windowed_blocks = blocks_decomposition(speech, w, R=0.5)\n",
     "    n_blocks, block_size = blocks.shape\n",
     "    \n",
-    "    ### w = hann(floor(0.04*sampling_rate), False)\n",
+    "    w = hann(floor(0.04*sampling_rate), False)\n",
+    "    \n",
+    "\n",
+    "    def blocks_reconstruction(windowed_blocks, window, taux_recouvrement):\n",
+    "      \n",
+    "      pas = int(len(window) * (1 - taux_recouvrement))\n",
+    "      signal_reconstruit = np.zeros(speech.size)\n",
+    "      nombre_segments = len(windowed_blocks)\n",
+    "\n",
+    "      for i in range(nombre_segments):\n",
+    "        indice_debut = i * pas\n",
+    "        signal_reconstruit[indice_debut:indice_debut+len(window)] += windowed_blocks[i]\n",
+    "\n",
+    "      return signal_reconstruit\n",
     "    \n",
     "    # Check if the reconstruction of the signal is correct\n",
     "    rec = blocks_reconstruction(windowed_blocks, w, speech.size, R = 0.5) \n",
-    "    wavfile.write(\"./results/block_reconstruction.wav\", sampling_rate, rec)   \n",
+    "    wavfile.write(\"./results/block_reconstruction.wav\", sampling_rate, rec)  \n",
+    " \n",
     "     \n",
     "    # -------------------------------------------------------\n",
     "    # 3: Encodes the signal block by block\n",
