--- a/OPTI/OPTI_notebook.ipynb
+++ b/OPTI/OPTI_notebook.ipynb
@@ -15,9 +15,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,13 +125,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 3 -"
+    "## 2 - Résolution numérique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 4 -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.ndimage import gaussian_filter\n",
+    "\n",
+    "def gradient(u):\n",
+    "    grad_x = np.zeros_like(u)\n",
+    "    grad_y = np.zeros_like(u)\n",
+    "    grad_x[:-1, :] = u[1:, :] - u[:-1, :]\n",
+    "    grad_y[:, :-1] = u[:, 1:] - u[:, :-1]\n",
+    "    return grad_x, grad_y\n",
+    "\n",
+    "def divergence(v):\n",
+    "    div = np.zeros_like(v)\n",
+    "    div[1:-1, :] += v[1:-1, :,0] - v[:-2, :,0]\n",
+    "    div[:, 1:-1] += v[:,1:-1,1] - v[:,:-2,1]\n",
+    "    div[0,:] += v[0,:,0]\n",
+    "    div[:,0] += v[:,0,1]\n",
+    "    div[-1,:] -= v[-2,:,0]\n",
+    "    div[:,-1] -= v[:,-2,1]\n",
+    "    return div"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
