--- a/TMS/TMS_notebook.ipynb
+++ b/TMS/TMS_notebook.ipynb
@@ -69,7 +69,7 @@
     "    \n",
     "\n",
     "    def blocks_reconstruction(windowed_blocks, window, taux_recouvrement):\n",
-    "      \n",
+    "    \n",
     "      pas = int(len(window) * (1 - taux_recouvrement))\n",
     "      signal_reconstruit = np.zeros(speech.size)\n",
     "      nombre_segments = len(windowed_blocks)\n",
@@ -167,6 +167,69 @@
     "      \n",
     "    wavfile.write(\"./results/decoded_speech_pitch.wav\", sampling_rate, \n",
     "     decoded_speech)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour démontrer que les coefficients $(α_k)_{1≤k≤p}$ sont solutions de l'équation matricielle donnée, nous devons minimiser l'erreur moyenne de l'estimation linéaire.\n",
+    "\n",
+    "O a: $ \\tilde{s}[n] = \\sum_{k=1}^{p} α_k s[n - k] $ et l'erreur d'estimation $ϵ[n]$ est alors: $ϵ[n] = s[n] - \\tilde{s}[n] = s[n] - \\sum_{k=1}^{p} α_k s[n - k]$\n",
+    "\n",
+    "L'erreur moyenne quadratique est alors: $\\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2$ et nous devons trouver les coefficients $(α_k)$ tels que la dérivée de cette erreur par rapport à chaque $α_k$ soit nulle.\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial α_k} \\left( \\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2 \\right) = \\frac{2}{N} \\sum_{n=1}^{N} ϵ[n] \\frac{\\partial ϵ[n]}{\\partial α_k}\n",
+    "$$\n",
+    "\n",
+    "En remplaçant \\(ϵ[n]\\) par son expression, nous obtenons :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial ϵ[n]}{\\partial α_k} = -s[n - k]\n",
+    "$$\n",
+    "\n",
+    "Ainsi, la dérivée devient :\n",
+    "\n",
+    "$$\n",
+    "\\frac{2}{N} \\sum_{n=1}^{N} \\left( s[n] - \\sum_{j=1}^{p} α_j s[n - j] \\right) (-s[n - k]) = 0\n",
+    "$$\n",
+    "\n",
+    "En simplifiant, nous obtenons :\n",
+    "\n",
+    "$$\n",
+    "\\sum_{n=1}^{N} s[n] s[n - k] = \\sum_{n=1}^{N} \\sum_{j=1}^{p} α_j s[n - j] s[n - k]\n",
+    "$$\n",
+    "\n",
+    "En réinsérant dans l'expression de $r_s[k]$:\n",
+    "\n",
+    "$$\n",
+    "r_s[k] = \\frac{1}{N} \\sum_{n=1}^{N} s[n] s[n - k]\n",
+    "$$\n",
+    "\n",
+    "Nous pouvons réécrire l'équation précédente sous forme matricielle :\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "r_s[0] & r_s[1] & \\cdots & r_s[p-1] \\\\\n",
+    "r_s[1] & r_s[0] & \\cdots & r_s[p-2] \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "r_s[p-1] & r_s[p-2] & \\cdots & r_s[0]\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "α_1 \\\\\n",
+    "α_2 \\\\\n",
+    "\\vdots \\\\\n",
+    "α_p\n",
+    "\\end{pmatrix}\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "r_s[1] \\\\\n",
+    "r_s[2] \\\\\n",
+    "\\vdots \\\\\n",
+    "r_s[p]\n",
+    "\\end{pmatrix}\n",
+    "$$"
    ]
   }
  ],
