première version du tout sans bonus

--- a/TMS/TMS_notebook.ipynb
+++ b/TMS/TMS_notebook.ipynb
@@ -88,7 +88,29 @@
     "    # -------------------------------------------------------\n",
     "    # 3: Encodes the signal block by block\n",
     "    # -------------------------------------------------------\n",
+    "\n",
+    "    def lpc_encode(segment, p):\n",
     "    \n",
+    "      N = len(segment)\n",
+    "      r = np.array([np.dot(segment[:N-k], segment[k:]) for k in range(p+1)])\n",
+    "      r = r / N  # Normalisation\n",
+    "\n",
+    "      # Construction de la matrice Toeplitz\n",
+    "      r_mat = np.zeros((p, p))\n",
+    "      for i in range(p):\n",
+    "        for j in range(p):\n",
+    "            r_mat[i, j] = r[abs(i - j)]\n",
+    "\n",
+    "      r_vect = r[1:p+1]\n",
+    "      coefficients = np.linalg.solve(r_mat, r_vect)\n",
+    "      prediction = np.zeros_like(segment)\n",
+    "\n",
+    "      for n in range(p, N):\n",
+    "        prediction[n] = np.dot(coefficients, segment[n-p:n][::-1])\n",
+    "\n",
+    "      return coefficients, prediction\n",
+    "\n",
+    "\n",
     "    p = 32 # number of coefficients of the filter\n",
     "    blocks_encoding = []\n",
     "    \n",
@@ -109,6 +131,21 @@
     "    # 4: Decodes each block based upon the residual\n",
     "    # -------------------------------------------------------\n",
     "    \n",
+    "    def lpc_decode(coefficients, residual):\n",
+    "    \n",
+    "      p = len(coefficients)\n",
+    "      N = len(residual)\n",
+    "      reconstructed_signal = np.zeros(N)\n",
+    "\n",
+    "      for n in range(N):\n",
+    "        if n < p:\n",
+    "          reconstructed_signal[n] = residual[n]\n",
+    "        else:\n",
+    "            reconstructed_signal[n] = residual[n] + np.dot(coefficients, reconstructed_signal[n-p:n][::-1])\n",
+    "\n",
+    "      return reconstructed_signal\n",
+    "\n",
+    "\n",
     "    blocks_decoded = []\n",
     "    for encoding in blocks_encoding:\n",
     "      \n",
@@ -125,6 +162,20 @@
     "    # 5: Decodes each block based upon white noise\n",
     "    # -------------------------------------------------------\n",
     "    \n",
+    "    def lpc_decode(coefficients, excitation):\n",
+    "    \n",
+    "      p = len(coefficients)\n",
+    "      N = len(excitation)\n",
+    "      reconstructed_signal = np.zeros(N)\n",
+    "\n",
+    "      for n in range(N):\n",
+    "        if n < p:\n",
+    "          reconstructed_signal[n] = excitation[n]\n",
+    "        else:\n",
+    "          reconstructed_signal[n] = excitation[n] + np.dot(coefficients, reconstructed_signal[n-p:n][::-1])\n",
+    "\n",
+    "      return reconstructed_signal\n",
+    "\n",
     "    blocks_decoded = []\n",
     "    for encoding in blocks_encoding:\n",
     "      \n",
@@ -133,11 +184,9 @@
     "        blocks_decoded.append(block_decoded)\n",
     "\n",
     "    blocks_decoded = np.array(blocks_decoded)\n",
-    "    decoded_speech = blocks_reconstruction(blocks_decoded, w, speech.size, \n",
-    "      R = 0.5)\n",
+    "    decoded_speech = blocks_reconstruction(blocks_decoded, w, speech.size, R = 0.5)\n",
     "      \n",
-    "    wavfile.write(\"./results/decoded_speech_noise.wav\", sampling_rate, \n",
-    "     decoded_speech)\n",
+    "    wavfile.write(\"./results/decoded_speech_noise.wav\", sampling_rate, decoded_speech)\n",
     "    \n",
     "    # -----------------------------------------------------------\n",
     "    # 6: Decodes each block based upon the pitch (Bonus Question)\n",
