--- a/OPTI/OPTI_notebook.ipynb
+++ b/OPTI/OPTI_notebook.ipynb
@@ -427,6 +427,71 @@
     "\n",
     "u_minimisation_scipy = u_vect_minimisation_scipy.reshape(n,m)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 8 -"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "→ Montrons que $TV-L2$ est une fonction convexe.\n",
+    "\n",
+    "Définissons les fonction :\n",
+    "$$\\begin{aligned}\n",
+    "\\beta \\colon \\mathbb{R}^{n \\times m} \\to \\mathbb{R} \\\\\n",
+    "u \\mapsto \\beta(u) & = \\dfrac{1}{2} \\| u - u_b \\|_2^2 \\\\\n",
+    "\\end{aligned}$$\n",
+    "$$\\begin{aligned}\n",
+    "\\gamma \\colon \\mathbb{R}^{n \\times m} \\to \\mathbb{R} \\\\\n",
+    "u \\mapsto \\gamma(u) & = \\sum_{i,j} \\| \\nabla u(i,j) \\|_1 \\\\\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "Telles que $(TV-L2) = \\beta + \\gamma$. \n",
+    "On a déjà montré dans à la question 2 que la fonction $\\beta$ est convexe. Reste à montrer la convexité de $\\gamma$. Explicitons cette fonction :\n",
+    "\n",
+    "$\\begin{aligned}\n",
+    "\\gamma(u) & = \\sum_{i,j} \\| \\nabla u(i,j) \\|_1 \\\\\n",
+    "                &= \\sum_{1 \\leq j < m} \\left| u(n, j+1) - u(n, j) \\right| \\\\ \n",
+    "                &+ \\sum_{1 \\leq i < n} \\left| u(i+1, m) - u(i, m) \\right| \\\\\n",
+    "                &+ \\sum_{\\substack{1 \\leq i < n \\\\ 1 \\leq j < m}} \\left| u(i+1, j) - u(i, j) \\right| + \\left| u(i, j+1) - u(i, j) \\right|\n",
+    "\\end{aligned}$\n",
+    "\n",
+    "On constate donc que $\\gamma$ est une somme de fonctions, chacune d'entre elles étant convexe comme composée d'une fonction linéaire de $\\mathbb{R}^{n \\times m}$  dans $\\mathbb{R}$ par la fonction valeur absolue (qui est convexe) sur $\\mathbb{R}^{n \\times m}$. On en déduit la convexité de $\\gamma$.\n",
+    "\n",
+    "**Bilan :** Le problème, défini sur l'ensemble convexe $\\mathbb{R}^{n \\times m}$ est convexe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "→ Montrons que $TV-L2$ n'est pas différentiable, en raisonnant par l'absurde. \n",
+    "On suppose donc que cette application $TV-L2$ est différentiable. On reprend les notations précedemment introduites.\n",
+    "\n",
+    "On a déjà montré dans à la question 2 que la fonction $\\beta$ est différentiable.\n",
+    "Par différence de fonctions différentiable, l'application $\\gamma = (TV-L2) - \\beta$ est elle aussi différentiable sur $\\mathbb{R}^{n \\times m}$.\n",
+    "\n",
+    "De plus, pout tout $t \\in \\mathbb{R}$, définissons $u_t = tE_{11}$ la matrice (ou vecteur) dont tous les coefficients sont nuls à l'exception du premier égal à $t$.\n",
+    "On obtient par le calcul : $$ \\forall (i,j) \\in [\\![1, n]\\!] \\times [\\![1, m]\\!], \\nabla u(i,j) =  \\left(-\\boldsymbol{\\delta}_{1i} \\boldsymbol{\\delta}_{1j} t,-\\boldsymbol{\\delta}_{1i} \\boldsymbol{\\delta}_{1j} t \\right)$$\n",
+    "\n",
+    "L'application suivante est bien définie et de classe $C^1$ sur $\\mathbb{R}$, car chacune de ses fonctions composantes l'est :\n",
+    "$$\\begin{aligned}\n",
+    "\\psi \\colon \\mathbb{R} \\to \\mathbb{R}^{n \\times m} \\\\\n",
+    "t \\mapsto \\psi(t) &= u_t\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "Par composition d'une fonction de $C^1(\\mathbb{R},\\mathbb{R}^{n \\times m})$ et d'une fonction différentiable sur $\\mathbb{R}^{n \\times m}$, on en déduit que la fonction $h = \\gamma \\circ \\psi$ est définie et dérivable sur $\\mathbb{R}$. \n",
+    "\n",
+    "Or $t \\in \\mathbb{R}, h(t) = \\gamma (u_t) = \\sum_{i,j} \\| \\nabla u(i,j) \\|_1^2 = \\| \\nabla u(1,1) \\|_1^2 = 2 |t|$, et sachant que la fonction valeur absolue n'est pas dérivable en 0, on en déduit que $h$ ne l'est pas non plus. Ceci est absurde et clôt notre raisonnement, car on a justement démontré la dérivabilité de $h$ sur $\\mathbb{R}$.\n",
+    "\n",
+    "**Bilan :** ($TV-L2$) n'est pas différentiable, donc le problème n'est pas différentiable.\n"
+   ]
   }
  ],
  "metadata": {
