chgt nom variable

--- a/TMS/TMS_notebook.ipynb
+++ b/TMS/TMS_notebook.ipynb
@@ -222,35 +222,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour démontrer que les coefficients $(α_k)_{1≤k≤p}$ sont solutions de l'équation matricielle donnée, nous devons minimiser l'erreur moyenne de l'estimation linéaire.\n",
+    "Pour démontrer que les coefficients $(α_k)_{1≤k≤p}$ sont solutions de l'équation matricielle donnée, on minimise l'erreur moyenne de l'estimation linéaire.\n",
     "\n",
-    "O a: $ \\tilde{s}[n] = \\sum_{k=1}^{p} α_k s[n - k] $ et l'erreur d'estimation $ϵ[n]$ est alors: $ϵ[n] = s[n] - \\tilde{s}[n] = s[n] - \\sum_{k=1}^{p} α_k s[n - k]$\n",
+    "O a $ \\tilde{s}[n] = \\sum_{k=1}^{p} α_k s[n - k] $ et l'erreur d'estimation $ϵ[n]$ est alors $ϵ[n] = s[n] - \\tilde{s}[n] = s[n] - \\sum_{k=1}^{p} α_k s[n - k]$\n",
     "\n",
-    "L'erreur moyenne quadratique est alors: $\\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2$ et nous devons trouver les coefficients $(α_k)$ tels que la dérivée de cette erreur par rapport à chaque $α_k$ soit nulle.\n",
+    "L'erreur moyenne quadratique est $\\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2$ et on cherche les coefficients $(α_k)$ tels que la dérivée de cette erreur par rapport à chaque $α_k$ soit nulle.\n",
     "\n",
-    "$$\n",
-    "\\frac{\\partial}{\\partial α_k} \\left( \\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2 \\right) = \\frac{2}{N} \\sum_{n=1}^{N} ϵ[n] \\frac{\\partial ϵ[n]}{\\partial α_k}\n",
-    "$$\n",
+    "$$ \\frac{\\partial}{\\partial α_k} \\left( \\frac{1}{N} \\sum_{n=1}^{N} ϵ[n]^2 \\right) = \\frac{2}{N} \\sum_{n=1}^{N} ϵ[n] \\frac{\\partial ϵ[n]}{\\partial α_k} $$\n",
     "\n",
-    "En remplaçant \\(ϵ[n]\\) par son expression, nous obtenons :\n",
+    "Or en réinjectant $ \\frac{\\partial ϵ[n]}{\\partial α_k} = -s[n - k] $, on obtient $ \\frac{2}{N} \\sum_{n=1}^{N} \\left( s[n] - \\sum_{j=1}^{p} α_j s[n - j] \\right) (-s[n - k]) = 0 $\n",
     "\n",
-    "$$\n",
-    "\\frac{\\partial ϵ[n]}{\\partial α_k} = -s[n - k]\n",
-    "$$\n",
-    "\n",
-    "Ainsi, la dérivée devient :\n",
-    "\n",
-    "$$\n",
-    "\\frac{2}{N} \\sum_{n=1}^{N} \\left( s[n] - \\sum_{j=1}^{p} α_j s[n - j] \\right) (-s[n - k]) = 0\n",
-    "$$\n",
-    "\n",
-    "En simplifiant, nous obtenons :\n",
-    "\n",
-    "$$\n",
-    "\\sum_{n=1}^{N} s[n] s[n - k] = \\sum_{n=1}^{N} \\sum_{j=1}^{p} α_j s[n - j] s[n - k]\n",
-    "$$\n",
-    "\n",
-    "En réinsérant dans l'expression de $r_s[k]$:\n",
+    "On a ensuite $ \\sum_{n=1}^{N} s[n] s[n - k] = \\sum_{n=1}^{N} \\sum_{j=1}^{p} α_j s[n - j] s[n - k] $ et en réinsérant dans l'expression de $r_s[k]$:\n",
     "\n",
     "$$\n",
     "r_s[k] = \\frac{1}{N} \\sum_{n=1}^{N} s[n] s[n - k]\n",
