TOUT LE PROJET !

--- a/OPTI/OPTI_notebook.ipynb
+++ b/OPTI/OPTI_notebook.ipynb
@@ -822,9 +822,34 @@
     "Par densité dans de l'ensemble des points où le gradient discret de u ne possède aucune composante nulle dans $\\mathcal{M}_{n \\times m}(\\mathbb{R})$, le sous-gradient de $\\gamma$ en tout point u où le gradient discret de u possède au moins une composante nulle, est défini comme l'enveloppe convexe \n",
     "++++++++++++++++++++++++++++++\n",
     "\n",
+    "Pour déterminer le sous-différentiel de $\\gamma$ en un point $v$ où $\\nabla v$ possède au moins une composante nulle, on utilise les 2 perturbations suivantes, en prenant $\\epsilon$ suppérieur strictement à la plus petite valeur absolue des composantes non nulles de $\\nabla v$ :\n",
     "\n",
+    "$ v_n^+ = v +\n",
+    "\\begin{bmatrix}\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
+    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon\n",
+    "\\end{bmatrix}\n",
+    "$\n",
     "\n",
-    "On obtient finalement bien $g(u) = u - u_b - \\text{div}(\\text{sign}(\\nabla u))$"
+    "$ v_n^- = v -\n",
+    "\\begin{bmatrix}\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
+    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon\n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "\n",
+    "On a : $\\lim_{n \\to \\infty} v_n^+ = v$ et $\\lim_{n \\to \\infty} v_n^- = v$\n",
+    "\n",
+    "En une composante (i,j) de $v$ où $\\nabla v$ est nulle, on a\n",
+    "$\\lim_{n \\to \\infty} \\nabla (v_n^+)_{i,j} = +1$ et $\\lim_{n \\to \\infty} \\nabla (v_n^-)_{i,j} = -1$\n",
+    "\n",
+    "En un tel point, on peut prendre pour la composante (i,j) d'un sous-gradient de $\\nabla v$ en $v$ n'importe quel point de l'enveloppe convexe de {-1,1}, ie de [-1,1], tel que 0.\n",
+    "\n",
+    "Ceci permet de conclure que $g$ est bien un sous-gradient de $ \\text{TV-L2} $."
    ]
   },
   {
