--- a/OPTI/OPTI_notebook.ipynb
+++ b/OPTI/OPTI_notebook.ipynb
@@ -822,27 +822,47 @@
     "Par densité dans de l'ensemble des points où le gradient discret de u ne possède aucune composante nulle dans $\\mathcal{M}_{n \\times m}(\\mathbb{R})$, le sous-gradient de $\\gamma$ en tout point u où le gradient discret de u possède au moins une composante nulle, est défini comme l'enveloppe convexe \n",
     "++++++++++++++++++++++++++++++\n",
     "\n",
-    "Pour déterminer le sous-différentiel de $\\gamma$ en un point $v$ où $\\nabla v$ possède au moins une composante nulle, on utilise les 2 perturbations suivantes, en prenant $\\epsilon$ suppérieur strictement à la plus petite valeur absolue des composantes non nulles de $\\nabla v$ :\n",
+    "Pour déterminer le sous-différentiel de $\\gamma$ en un point $v$ où $\\nabla v$ possède au moins une composante nulle, on utilise les 2 perturbations v^{+}_{\\frac{1}{k}} et v^{-}_{\\frac{1}{k}} introduites ci-dessous :\n",
     "\n",
-    "$ v_n^+ = v +\n",
-    "\\begin{bmatrix}\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
-    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon\n",
-    "\\end{bmatrix}\n",
+    "On pose \n",
+    "$\n",
+    "\\alpha = \\frac{1}{n \\times m} \\times \\min \\left(\n",
+    "\\min_{\\substack{(i,j) \\\\ \\nabla v(i,j) \\ne 0}} |\\nabla_x v(i,j)| \\quad , \\quad\n",
+    "\\min_{\\substack{(i,j) \\\\ \\nabla v(i,j) \\ne 0}} |\\nabla_y v(i,j)|\n",
+    "\\right) > 0\n",
     "$\n",
     "\n",
-    "$ v_n^- = v -\n",
-    "\\begin{bmatrix}\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon \\\\\n",
-    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "\\epsilon & 2\\epsilon & 3\\epsilon & \\cdots & n\\epsilon\n",
-    "\\end{bmatrix}\n",
+    "puis $\\varepsilon \\in ]0, \\alpha[$,\n",
+    "\n",
+    "$\n",
+    "v^{+}_{\\varepsilon} = v +\n",
+    "\\begin{pmatrix}\n",
+    "\\varepsilon & 2\\varepsilon & 3\\varepsilon & \\cdots & j\\varepsilon & \\cdots & 3m\\varepsilon \\\\\n",
+    "2\\varepsilon & 2\\cdot2\\varepsilon & 3\\cdot2\\varepsilon & & & & \\\\\n",
+    "3\\varepsilon & 2\\cdot3\\varepsilon & 3\\cdot3\\varepsilon & & & & \\\\\n",
+    "\\vdots & & & \\ddots & & & \\\\\n",
+    "i\\varepsilon & & & & & & \\\\\n",
+    "\\vdots & & & & & & nm\\varepsilon \\\\\n",
+    "\\end{pmatrix}\n",
     "$\n",
     "\n",
-    "On a : $\\lim_{n \\to \\infty} v_n^+ = v$ et $\\lim_{n \\to \\infty} v_n^- = v$\n",
+    "$\n",
+    "v^{-}_{\\varepsilon} = v -\n",
+    "\\begin{pmatrix}\n",
+    "\\varepsilon & 2\\varepsilon & 3\\varepsilon & \\cdots & j\\varepsilon & \\cdots & 3m\\varepsilon \\\\\n",
+    "2\\varepsilon & 2\\cdot2\\varepsilon & 3\\cdot2\\varepsilon & & & & \\\\\n",
+    "3\\varepsilon & 2\\cdot3\\varepsilon & 3\\cdot3\\varepsilon & & & & \\\\\n",
+    "\\vdots & & & \\ddots & & & \\\\\n",
+    "i\\varepsilon & & & & & & \\\\\n",
+    "\\vdots & & & & & & nm\\varepsilon \\\\\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "\n",
+    "où les matrices introduites (avec les pointillés) sont $(i \\times j \\times \\varepsilon)_{(i,j) \\in \\llbracket 1,n \\rrbracket \\times \\llbracket 1,m \\rrbracket}$\n",
+    "\n",
+    "On utilise alors $ \\varepsilon = \\frac{1}{k}$, sachant qu'à partir d'un certain rang, $\\frac{1}{k} \\in ]0, \\alpha[$.\n",
+    "\n",
+    "On a : $\\lim_{k \\to +\\infty} v^{+}_{\\frac{1}{k}} = \\lim_{k \\to +\\infty} v^{-}_k = v $\n",
     "\n",
     "En une composante (i,j) de $v$ où $\\nabla v$ est nulle, on a\n",
     "$\\lim_{n \\to \\infty} \\nabla (v_n^+)_{i,j} = +1$ et $\\lim_{n \\to \\infty} \\nabla (v_n^-)_{i,j} = -1$\n",
