--- a/TMS/Question_3.ipynb
+++ b/TMS/Question_3.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bastien AVRILLON"
+    "Bastien AVRILLON et Guillaume GIESSNER"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Mini-projet Traitement du Signal - q3***"
+    "## Mini-projet Traitement du Signal - QUESTION 3"
    ]
   },
   {
@@ -21,12 +21,7 @@
     "Montrons que les coefficients $(α_k)_{1≤k≤p}$ sont solutions de l'équation matricielle :\n",
     "\n",
     "$$\n",
-    "\\begin{pmatrix}\n",
-    "r_s[0] & r_s[1] & \\cdots & r_s[p-1] \\\\\n",
-    "r_s[1] & r_s[0] & \\cdots & r_s[p-2] \\\\\n",
-    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "r_s[p-1] & r_s[p-2] & \\cdots & r_s[0]\n",
-    "\\end{pmatrix}\n",
+    "R\n",
     "\\begin{pmatrix}\n",
     "α_1 \\\\\n",
     "α_2 \\\\\n",
@@ -42,7 +37,7 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "où la matrice représentée est donc : $(r_s[|i-j|])_{1≤i,j≤p}$.\n",
+    "où $R$ est une matrice de $\\mathcal{M}_p(\\mathbb{R})$ définie par : $R_{ij} = R_{ji} = \\sum_{k=0}^{N-1-\\max(i,j)} s[k]s[k + |i - j|]$.\n",
     "\n",
     "Pour cela, posons $\\beta[n] = s[n] - \\tilde{s}[n] = s[n] - \\sum_{k=1}^{p} α_k s[n - k]$, tel que $ϵ[n] = \\beta[n]^2$. L'erreur d'estimation moyenne est par définition : $\\sum_{n=1}^{N-1} ϵ[n] = \\sum_{n=1}^{N-1} \\beta[n]^2$. On cherche les coefficients $(α_k)$ tels que la dérivée de cette erreur par rapport à chaque $α_k$ soit nulle, ie tels que pour tout k respectant $1≤k≤p$  :\n",
     "\n",
@@ -50,16 +45,22 @@
     "\n",
     "Or sachant $ \\frac{\\partial \\beta[n]} {\\partial α_k} = -s[n - k] $ et en utilisant l'expression de $\\beta[n]$, on obtient $0 = 2 \\sum_{n=1}^{N-1} \\left( s[n] - \\sum_{j=1}^{p} α_j s[n - j] \\right) (-s[n - k])$.\n",
     "\n",
-    "Ceci permet d'en déduire $ \\sum_{n=1}^{N-1} s[n] s[n - k] = \\sum_{n=1}^{N-1} \\sum_{j=1}^{p} α_j s[n - j] s[n - k] $, et après changement d'indice :\n",
-    "$$ \\sum_{l=1}^{N-1-k} s[l+k] s[l] = \\sum_{j=1}^{p} α_j \\sum_{l=1}^{N-1-k}   s[l + k - j] s[l] $$\n",
+    "Ceci permet d'en déduire $ \\sum_{n=1}^{N-1} s[n] s[n - k] = \\sum_{n=1}^{N-1} \\sum_{j=1}^{p} α_j s[n - j] s[n - k] $, et après changement d'indice dans la somme du membre de gauche (sachant $1≤k≤p$), puis dans celle du membre de droite :\n",
+    "$$ \\begin{aligned} \n",
+    "\\sum_{l=0}^{N-1-k} s[l+k] s[l] &= \\sum_{j=1}^{p} α_j \\sum_{l=1}^{N-1} s[l - j] s[l - k] \\\\\n",
+    "&= \\sum_{j=1}^{p} α_j \\sum_{l=\\max(k,j)}^{N-1} s[l - j] s[l - k] \\\\\n",
+    "&= \\sum_{j=1}^{p} α_j \\sum_{l=0}^{N-1-\\max(k,j)} s[l - j +\\max(k,j)] s[l - k +\\max(k,j)] \\\\\n",
+    "&= \\sum_{j=1}^{p} α_j \\sum_{l=0}^{N-1-\\max(k,j)}  s[l + |k - j|] s[l] \\\\\n",
+    "&= \\sum_{j=1}^{p} α_j R_{kj}\n",
+    "\\end{aligned}$$\n",
     "\n",
-    "On retrouve l'expression de $r_s[k] = \\frac{1}{N} \\sum_{l=1}^{N-k} s[l] s[l + k]$ (en négligeant le proclème de borne supérieure de la somme !), d'où :\n",
+    "Lors du calcul, on a utilisé :\n",
+    "- Si $k \\geq j$ : $s[l - j + \\max(k,j)]\\, s[l - k + \\max(k,j)] = s[l + k - j]\\, s[l] = s[l + |k - j|]\\, s[l]$\n",
+    "- Si $k < j$ :  $s[l - j + \\max(k,j)]\\, s[l - k + \\max(k,j)] = s[l]\\, s[l + j - k] = s[l + |j - k|]\\, s[l]$\n",
     "\n",
-    "$$ r_s[k] = \\sum_{j=1}^{p} α_j r_s[k-j]$$\n",
-    "\n",
-    "MAIS CE QU'IL FAUDRAIT OBTENIR EST : \n",
-    "\n",
-    "$$ r_s[k] = \\sum_{j=1}^{p} α_j r_s[|k-j|]$$\n"
+    "Et en retrouvant l'expression de $r_s[k] = \\sum_{l=0}^{N-1-k} s[l] s[l + k]$ dans le terme de gauche, on obtient finalement :\n",
+    "$$ r_s[k] = \\sum_{j=1}^{p} α_j R_{kj}$$\n",
+    "Cette égalité étant valable pour tout $1≤k≤p$, on a montré le produit matriciel souhaité."
    ]
   }
  ],
