--- a/DATA/Projet_GR28.ipynb
+++ b/DATA/Projet_GR28.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "__Binôme numéro ### -- NOM 1 Prénom 1 et NOM 2 Prénom 2__"
+    "__Binôme numéro 28 -- AVRILLON Bastien et BOIARSKY Honoré__"
    ]
   },
   {
